internal/gatewayapi/testdata/clienttrafficpolicy-udp-idle-timeout.in.yaml
clientTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: target-gateway
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        sectionName: udp
      timeout:
        udp:
          idleTimeout: "30s"
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: udp
          protocol: UDP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
udpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: UDPRoute
    metadata:
      namespace: default
      name: udproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8162
